--- a/css/styles.css
+++ b/css/styles.css
@@ -725,11 +725,16 @@ and (min-resolution: 2x) {
 
 .list-our-team {
     display: flex;
+    align-items: center;
         justify-content: center;
         flex-direction: column;
         gap: 72px;
+        
 }
 
+.our-team-list {
+    width: 264px;
+}
 
 }
 @media screen and (min-width: 768px) {
@@ -861,11 +866,30 @@ column-gap: calc((100% - 48px) / 2);
      .our-portfolio {
         padding: 96px 0;
      }
+
+         .our-portfolio-list{
+            display: flex;
+            flex-direction: column;
+                             gap: 24px;
+                            row-gap: 48px;
+                            column-gap: 24px;
+         }
 }
 
 @media screen and (min-width: 768px) {
     .our-portfolio {
             padding: 96px 0;
+        }
+
+        .our-portfolio-list {
+                flex-direction: row;
+            Flex-wrap: wrap;
+                        gap: 24px;
+                            row-gap: 48px;
+                            column-gap: 24px;
+        }
+        .our-portfolio-item{
+            width: calc((100% - 24px) / 2);
         }
 }
 
@@ -873,7 +897,31 @@ column-gap: calc((100% - 48px) / 2);
 .our-portfolio {
         padding: 120px 0;
     }
+
+        .our-portfolio-list {
+            flex-wrap: wrap;
+            flex-direction: row;
+            align-items: center;
+            gap: 24px;
+            row-gap: 48px;
+            column-gap: 24px;
+        }
 }
+
+.our-portfolio-content {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+}
+
+.our-portfolio-item {
+    width: calc((100% - 72) / 4);
+    margin-bottom: 0;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 
 .our-portfolio-title {
     text-transform: capitalize;
