--- a/css/styles.css
+++ b/css/styles.css
@@ -875,6 +875,10 @@ column-gap: calc((100% - 48px) / 2);
                             row-gap: 48px;
                             column-gap: 24px;
          }
+         
+         .our-portfolio-cover-text{
+            display: none;
+         }
 }
 
 @media screen and (min-width: 768px) {
@@ -910,6 +914,10 @@ column-gap: calc((100% - 48px) / 2);
 
                 .our-portfolio-item {
                     width: calc((100% - 48px) / 3);
+                }
+                
+                .our-portfolio-cover-text {
+                    display: block;
                 }
 }
 
@@ -997,3 +1005,190 @@ column-gap: calc((100% - 48px) / 2);
 }
 
 /* #endregion Our Portfolio */
+
+@media screen and (min-width: 320px) {
+    .footer {
+        background-color: #2e2f42;
+            padding: 96px 0;
+            
+    }
+
+        .footer-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 72px;
+        }
+
+.footer-content {
+text-align: center;
+}
+
+.footer-text {
+    text-align: left;
+}
+
+.social-media-title {
+    text-align: center;
+}
+
+.footer-form-inputs {
+    min-width: 288px;
+}
+
+.footer-form {
+flex-direction: column;
+}
+
+
+
+}
+
+@media screen and (min-width: 768px) {
+        .footer-container {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                    row-gap: 72px;
+                        column-gap: 24px;
+                        width: 584px;
+            }
+
+
+}
+
+@media screen and (min-width: 1158px) {
+    .footer {
+            padding: 100px 0;
+    display: flex;
+        }
+}
+
+
+
+.logo-studio-footer {
+    color: #f4f4fd;
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    max-width: 264px;
+}
+
+.social-media-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-social-media-list-item {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-media-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-media-list-link:hover,
+.footer-social-media-list-link:focus {
+    background-color: #31d0aa;
+}
+
+.sub-cont-footer {
+    margin-left: auto;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-form-inputs {
+    outline: transparent;
+    border: 1px solid #fff;
+    background-color: transparent;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
+}
+
+.footer-form-inputs::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+}
+
+.footer-form-inputs:hover,
+.footer-form-inputs:focus {
+    border: 1px solid #31d0aa;
+}
+
+.label-footer {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.footer-sub-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 16px;
+
+    border-radius: 4px;
+    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+
+    border: none;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-sub-btn:hover,
+.footer-sub-btn:focus {
+    background-color: #31d0aa;
+}
+
+.footer-sub-btn-icon-image {
+    margin-left: 16px;
+    fill: #ffffff;
+}
+
+
+/* #endegion footer */
