--- a/css/styles.css
+++ b/css/styles.css
@@ -1246,10 +1246,6 @@ flex-direction: column;
         min-height: 623px;
     }
 
-.modal-title-text {
-    text-align: center;
-}
-
 .modal-form-inputs {
 padding-left: 34px;
 }  
@@ -1258,14 +1254,51 @@ padding-left: 34px;
     margin-right: 7.5px;
 }
 
+.user-comment {
+    width: 256px;
+}
+
 }
 
 @media screen and (min-width: 768px) {
+.modal {
+    padding: 72px 24px 24px 24px;
+        width: 408px;
+        min-height: 584px;
+    }
+
+        .modal-form-inputs {
+            padding-left: 38px;
+        }
+
+.custom-checkbox {
+    margin-right: 8px;
+}
+
+.user-comment {
+    width: 360px;
+}
 
 }
 
 @media screen and (min-width: 1158px) {
+.modal {
+        padding: 72px 24px 24px 24px;
+        width: 408px;
+        min-height: 584px;
+    }
 
+    .modal-form-inputs {
+        padding-left: 38px;
+    }
+
+    .custom-checkbox {
+        margin-right: 8px;
+    }
+
+    .user-comment {
+        width: 360px;
+    }
 }
 
 .backdrop {
@@ -1300,11 +1333,10 @@ padding-left: 34px;
     position: absolute;
     top: 50%;
     left: 50%;
-    
+
 
     border-radius: 4px;
-    width: 408px;
-    min-height: 584px;
+
 
     transform: translate(-50%, -50%);
 
@@ -1387,7 +1419,6 @@ padding-left: 34px;
     border-radius: 4px;
     width: 100%;
     height: 40px;
-    padding-left: 38px;
     outline: transparent;
     background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1415,7 +1446,6 @@ padding-left: 34px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-right: 8px;
     fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -1446,7 +1476,6 @@ padding-left: 34px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     padding: 8px 16px;
-    width: 360px;
     height: 120px;
     resize: none;
 
