--- a/css/styles.css
+++ b/css/styles.css
@@ -451,6 +451,8 @@ font-weight: 700;
 
 @media screen and (min-width: 320px) {
 .hero {
+    margin: 0 auto;
+
     background-image: linear-gradient(to bottom,
             rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
@@ -480,6 +482,7 @@ font-weight: 700;
 
 @media screen and (min-width: 768px) {
     .hero {
+        margin: 0 auto;
         background-image: linear-gradient(to bottom,
                     rgba(46, 47, 66, 0.7),
                     rgba(46, 47, 66, 0.7)), 
@@ -589,6 +592,10 @@ and (min-resolution: 2x) {
         margin-bottom: 8px;
 }
 
+.features-list {
+    margin: 0 auto;
+}
+
     .svg-image, .svg-features-box {
         display: none;
     }
@@ -620,6 +627,10 @@ and (min-resolution: 2x) {
                 color: #2e2f42;
                 margin-bottom: 8px;
     }
+
+.features-list {
+    margin: 0 auto;
+}
 
     .svg-image,
     .svg-features-box {
@@ -656,6 +667,7 @@ and (min-resolution: 2x) {
         margin: 24px 100px;
     }
         .features-list {
+            margin: 0 auto;
             max-width: 1128px;
         }
 .list-features {
